# Smart-Trading-Bot

./: DARK_MODE_SETUP.md  README.md
FrontendWithVite/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
FrontendWithVite/src/: App.tsx  index.css
FrontendWithVite/src/components/: ApiStatus.tsx  Dashboard.tsx  Header.tsx  PredictionForm.tsx  PredictionResults.tsx  ThemeProvider.tsx  ThemeToggle.tsx
FrontendWithVite/src/hooks/: useApiHealth.ts  usePredictions.ts  useTheme.ts
FrontendWithVite/src/services/: api.ts
FrontendWithVite/src/types/: index.ts
FrontendWithVite/src/utils/: index.ts
backend/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  start.py  test_api.py
training/: model_metadata.json  model_scalers.pkl  train_stock_transformer.py
