[project]
name = "stock-prediction-api"
version = "1.0.0"
description = "FastAPI backend for AI-powered stock price prediction"
authors = [{name = "AI Assistant", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.0.0",
    "pandas>=2.0.0", 
    "numpy>=1.24.0",
    "yfinance>=0.2.18",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0", 
    "pytest-asyncio>=0.21.0"
]
